methods.picture.MethodsPictureLarge.scala.error
Compilation error:
MethodsPictureLarge:19: error: ':' expected but ')' found.
def makePattern(a) {
                 ^MethodsPictureLarge:56: error: identifier expected but '}' found.
} 
^